--- a/include/docs/html/classaxPanel.html
+++ b/include/docs/html/classaxPanel.html
@@ -63,6 +63,15 @@ void&#160;</td><td class="memItemRight" valign="bottom"><b>DeleteWindow</b> (<a 
 <tr class="memitem:a6b8bc7cfb9517815db83b6cec41a9722"><td class="memItemLeft" align="right" valign="top"><a class="anchor" id="a6b8bc7cfb9517815db83b6cec41a9722"></a>
 <a class="el" href="classaxApp.html">axApp</a> *&#160;</td><td class="memItemRight" valign="bottom"><b>GetApp</b> ()</td></tr>
 <tr class="separator:a6b8bc7cfb9517815db83b6cec41a9722"><td class="memSeparator" colspan="2">&#160;</td></tr>
+<tr class="memitem:aaf6d4bf010d1f69329b909f636b612bb"><td class="memItemLeft" align="right" valign="top"><a class="anchor" id="aaf6d4bf010d1f69329b909f636b612bb"></a>
+void&#160;</td><td class="memItemRight" valign="bottom"><b>BlockDrawing</b> ()</td></tr>
+<tr class="separator:aaf6d4bf010d1f69329b909f636b612bb"><td class="memSeparator" colspan="2">&#160;</td></tr>
+<tr class="memitem:a91502ae5780f56c80e70e8297bc06f26"><td class="memItemLeft" align="right" valign="top"><a class="anchor" id="a91502ae5780f56c80e70e8297bc06f26"></a>
+void&#160;</td><td class="memItemRight" valign="bottom"><b>BlockDrawing</b> (const <a class="el" href="classaxTemplateRect.html">axRect</a> &amp;rect)</td></tr>
+<tr class="separator:a91502ae5780f56c80e70e8297bc06f26"><td class="memSeparator" colspan="2">&#160;</td></tr>
+<tr class="memitem:a295af9dd5bc73168019e13a2ea22768b"><td class="memItemLeft" align="right" valign="top"><a class="anchor" id="a295af9dd5bc73168019e13a2ea22768b"></a>
+void&#160;</td><td class="memItemRight" valign="bottom"><b>UnBlockDrawing</b> ()</td></tr>
+<tr class="separator:a295af9dd5bc73168019e13a2ea22768b"><td class="memSeparator" colspan="2">&#160;</td></tr>
 <tr class="inherit_header pub_methods_classaxWindow"><td colspan="2" onclick="javascript:toggleInherit('pub_methods_classaxWindow')"><img src="closed.png" alt="-"/>&#160;Public Member Functions inherited from <a class="el" href="classaxWindow.html">axWindow</a></td></tr>
 <tr class="memitem:a4e35af072fdd0ba303568768739dbaf8 inherit pub_methods_classaxWindow"><td class="memItemLeft" align="right" valign="top"><a class="anchor" id="a4e35af072fdd0ba303568768739dbaf8"></a>
 &#160;</td><td class="memItemRight" valign="bottom"><b>axWindow</b> (<a class="el" href="classaxWindow.html">axWindow</a> *parent, const <a class="el" href="classaxTemplateRect.html">axRect</a> &amp;rect)</td></tr>
@@ -85,6 +94,9 @@ void&#160;</td><td class="memItemRight" valign="bottom"><b>SetSize</b> (const <a
 <tr class="memitem:aaa08c1e989d3b0b77f43e5d459d72ea6 inherit pub_methods_classaxWindow"><td class="memItemLeft" align="right" valign="top"><a class="anchor" id="aaa08c1e989d3b0b77f43e5d459d72ea6"></a>
 void&#160;</td><td class="memItemRight" valign="bottom"><b>SetPosition</b> (const <a class="el" href="classaxTemplate2DPoint.html">axPoint</a> &amp;pos)</td></tr>
 <tr class="separator:aaa08c1e989d3b0b77f43e5d459d72ea6 inherit pub_methods_classaxWindow"><td class="memSeparator" colspan="2">&#160;</td></tr>
+<tr class="memitem:a6110f1eed8315728ac255de26aad1221 inherit pub_methods_classaxWindow"><td class="memItemLeft" align="right" valign="top"><a class="anchor" id="a6110f1eed8315728ac255de26aad1221"></a>
+<a class="el" href="classaxTemplate2DPoint.html">axPoint</a>&#160;</td><td class="memItemRight" valign="bottom"><b>GetBottomLeftPosition</b> () const </td></tr>
+<tr class="separator:a6110f1eed8315728ac255de26aad1221 inherit pub_methods_classaxWindow"><td class="memSeparator" colspan="2">&#160;</td></tr>
 <tr class="memitem:a2cd5246386a7d6b11cb3cf5e7ef6a078 inherit pub_methods_classaxWindow"><td class="memItemLeft" align="right" valign="top"><a class="anchor" id="a2cd5246386a7d6b11cb3cf5e7ef6a078"></a>
 bool&#160;</td><td class="memItemRight" valign="bottom"><b>IsShown</b> () const </td></tr>
 <tr class="separator:a2cd5246386a7d6b11cb3cf5e7ef6a078 inherit pub_methods_classaxWindow"><td class="memSeparator" colspan="2">&#160;</td></tr>
@@ -144,7 +156,7 @@ axID&#160;</td><td class="memItemRight" valign="bottom"><b>GetId</b> () const </
 </div><!-- contents -->
 <!-- start footer part -->
 <hr class="footer"/><address class="footer"><small>
-Generated on Mon Jul 7 2014 13:07:37 by &#160;<a href="http://www.doxygen.org/index.html">
+Generated on Tue Jul 29 2014 19:56:05 by &#160;<a href="http://www.doxygen.org/index.html">
 <img class="footer" src="doxygen.png" alt="doxygen"/>
 </a> 1.8.6
 </small></address>
