--- a/include/docs/html/classaxWindow.html
+++ b/include/docs/html/classaxWindow.html
@@ -58,6 +58,9 @@ void&#160;</td><td class="memItemRight" valign="bottom"><b>SetSize</b> (const <a
 <tr class="memitem:aaa08c1e989d3b0b77f43e5d459d72ea6"><td class="memItemLeft" align="right" valign="top"><a class="anchor" id="aaa08c1e989d3b0b77f43e5d459d72ea6"></a>
 void&#160;</td><td class="memItemRight" valign="bottom"><b>SetPosition</b> (const <a class="el" href="classaxTemplate2DPoint.html">axPoint</a> &amp;pos)</td></tr>
 <tr class="separator:aaa08c1e989d3b0b77f43e5d459d72ea6"><td class="memSeparator" colspan="2">&#160;</td></tr>
+<tr class="memitem:a6110f1eed8315728ac255de26aad1221"><td class="memItemLeft" align="right" valign="top"><a class="anchor" id="a6110f1eed8315728ac255de26aad1221"></a>
+<a class="el" href="classaxTemplate2DPoint.html">axPoint</a>&#160;</td><td class="memItemRight" valign="bottom"><b>GetBottomLeftPosition</b> () const </td></tr>
+<tr class="separator:a6110f1eed8315728ac255de26aad1221"><td class="memSeparator" colspan="2">&#160;</td></tr>
 <tr class="memitem:a2cd5246386a7d6b11cb3cf5e7ef6a078"><td class="memItemLeft" align="right" valign="top"><a class="anchor" id="a2cd5246386a7d6b11cb3cf5e7ef6a078"></a>
 bool&#160;</td><td class="memItemRight" valign="bottom"><b>IsShown</b> () const </td></tr>
 <tr class="separator:a2cd5246386a7d6b11cb3cf5e7ef6a078"><td class="memSeparator" colspan="2">&#160;</td></tr>
@@ -126,7 +129,7 @@ class&#160;</td><td class="memItemRight" valign="bottom"><b>axManager</b></td></
 </div><!-- contents -->
 <!-- start footer part -->
 <hr class="footer"/><address class="footer"><small>
-Generated on Mon Jul 7 2014 13:07:37 by &#160;<a href="http://www.doxygen.org/index.html">
+Generated on Tue Jul 29 2014 19:56:05 by &#160;<a href="http://www.doxygen.org/index.html">
 <img class="footer" src="doxygen.png" alt="doxygen"/>
 </a> 1.8.6
 </small></address>
