--- a/include/docs/html/axApp_8h_source.html
+++ b/include/docs/html/axApp_8h_source.html
@@ -32,37 +32,42 @@
 <div class="line"><a name="l00012"></a><span class="lineno">   12</span>&#160;{</div>
 <div class="line"><a name="l00013"></a><span class="lineno">   13</span>&#160;<span class="keyword">public</span>:</div>
 <div class="line"><a name="l00014"></a><span class="lineno">   14</span>&#160;    <a class="code" href="classaxApp.html">axApp</a>();</div>
-<div class="line"><a name="l00015"></a><span class="lineno">   15</span>&#160;</div>
-<div class="line"><a name="l00016"></a><span class="lineno">   16</span>&#160;    <a class="code" href="classaxApp.html">axApp</a>(<span class="keyword">const</span> <a class="code" href="classaxTemplate2DPoint.html">axSize</a>&amp; frame_size);</div>
-<div class="line"><a name="l00017"></a><span class="lineno">   17</span>&#160;</div>
-<div class="line"><a name="l00018"></a><span class="lineno">   18</span>&#160;    <span class="keywordtype">void</span> MainLoop();</div>
-<div class="line"><a name="l00019"></a><span class="lineno">   19</span>&#160;</div>
-<div class="line"><a name="l00020"></a><span class="lineno">   20</span>&#160;    <a class="code" href="classaxManager.html">axManager</a>* GetWindowManager();</div>
-<div class="line"><a name="l00021"></a><span class="lineno">   21</span>&#160;</div>
-<div class="line"><a name="l00022"></a><span class="lineno">   22</span>&#160;    <span class="keywordtype">void</span> AddWindow(<a class="code" href="classaxWindow.html">axWindow</a>* win);</div>
-<div class="line"><a name="l00023"></a><span class="lineno">   23</span>&#160;</div>
-<div class="line"><a name="l00024"></a><span class="lineno">   24</span>&#160;    <span class="keywordtype">void</span> UpdateAll();</div>
-<div class="line"><a name="l00025"></a><span class="lineno">   25</span>&#160;</div>
-<div class="line"><a name="l00026"></a><span class="lineno">   26</span>&#160;    <a class="code" href="classaxCore.html">axCore</a>* GetCore();</div>
-<div class="line"><a name="l00027"></a><span class="lineno">   27</span>&#160;</div>
-<div class="line"><a name="l00028"></a><span class="lineno">   28</span>&#160;<span class="keyword">private</span>:</div>
-<div class="line"><a name="l00029"></a><span class="lineno">   29</span>&#160;    <a class="code" href="classaxCore.html">axCore</a>* _core;</div>
-<div class="line"><a name="l00030"></a><span class="lineno">   30</span>&#160;};</div>
-<div class="line"><a name="l00031"></a><span class="lineno">   31</span>&#160;</div>
-<div class="line"><a name="l00032"></a><span class="lineno">   32</span>&#160;<span class="comment">//extern axCore* axCORE;</span></div>
-<div class="line"><a name="l00033"></a><span class="lineno">   33</span>&#160;</div>
-<div class="line"><a name="l00034"></a><span class="lineno">   34</span>&#160;<span class="preprocessor">#endif //__AX_APP__</span></div>
-<div class="line"><a name="l00035"></a><span class="lineno">   35</span>&#160;<span class="preprocessor"></span></div>
+<div class="line"><a name="l00015"></a><span class="lineno">   15</span>&#160;    <span class="comment">// ~axApp();</span></div>
+<div class="line"><a name="l00016"></a><span class="lineno">   16</span>&#160;</div>
+<div class="line"><a name="l00017"></a><span class="lineno">   17</span>&#160;    <a class="code" href="classaxApp.html">axApp</a>(<span class="keyword">const</span> <a class="code" href="classaxTemplate2DPoint.html">axSize</a>&amp; frame_size);</div>
+<div class="line"><a name="l00018"></a><span class="lineno">   18</span>&#160;</div>
+<div class="line"><a name="l00019"></a><span class="lineno">   19</span>&#160;    <span class="keywordtype">void</span> MainLoop();</div>
+<div class="line"><a name="l00020"></a><span class="lineno">   20</span>&#160;</div>
+<div class="line"><a name="l00021"></a><span class="lineno">   21</span>&#160;    <span class="keywordtype">void</span> CreatePopupWindow(<span class="keyword">const</span> <a class="code" href="classaxTemplate2DPoint.html">axSize</a>&amp; size);</div>
+<div class="line"><a name="l00022"></a><span class="lineno">   22</span>&#160;</div>
+<div class="line"><a name="l00023"></a><span class="lineno">   23</span>&#160;    <a class="code" href="classaxManager.html">axManager</a>* GetWindowManager();</div>
+<div class="line"><a name="l00024"></a><span class="lineno">   24</span>&#160;</div>
+<div class="line"><a name="l00025"></a><span class="lineno">   25</span>&#160;    <span class="keywordtype">void</span> AddWindow(<a class="code" href="classaxWindow.html">axWindow</a>* win);</div>
+<div class="line"><a name="l00026"></a><span class="lineno">   26</span>&#160;</div>
+<div class="line"><a name="l00027"></a><span class="lineno">   27</span>&#160;    <span class="keywordtype">void</span> UpdateAll();</div>
+<div class="line"><a name="l00028"></a><span class="lineno">   28</span>&#160;</div>
+<div class="line"><a name="l00029"></a><span class="lineno">   29</span>&#160;    <a class="code" href="classaxCore.html">axCore</a>* GetCore();</div>
+<div class="line"><a name="l00030"></a><span class="lineno">   30</span>&#160;</div>
+<div class="line"><a name="l00031"></a><span class="lineno">   31</span>&#160;    <span class="keywordtype">string</span> GetCurrentAppDirectory();</div>
+<div class="line"><a name="l00032"></a><span class="lineno">   32</span>&#160;</div>
+<div class="line"><a name="l00033"></a><span class="lineno">   33</span>&#160;<span class="keyword">private</span>:</div>
+<div class="line"><a name="l00034"></a><span class="lineno">   34</span>&#160;    <a class="code" href="classaxCore.html">axCore</a>* _core;</div>
+<div class="line"><a name="l00035"></a><span class="lineno">   35</span>&#160;};</div>
+<div class="line"><a name="l00036"></a><span class="lineno">   36</span>&#160;</div>
+<div class="line"><a name="l00037"></a><span class="lineno">   37</span>&#160;<span class="comment">//extern axCore* axCORE;</span></div>
+<div class="line"><a name="l00038"></a><span class="lineno">   38</span>&#160;</div>
+<div class="line"><a name="l00039"></a><span class="lineno">   39</span>&#160;<span class="preprocessor">#endif //__AX_APP__</span></div>
+<div class="line"><a name="l00040"></a><span class="lineno">   40</span>&#160;<span class="preprocessor"></span></div>
 <div class="ttc" id="classaxManager_html"><div class="ttname"><a href="classaxManager.html">axManager</a></div><div class="ttdef"><b>Definition:</b> axManager.h:18</div></div>
 <div class="ttc" id="classaxCore_html"><div class="ttname"><a href="classaxCore.html">axCore</a></div><div class="ttdef"><b>Definition:</b> axCore.h:10</div></div>
-<div class="ttc" id="classaxWindow_html"><div class="ttname"><a href="classaxWindow.html">axWindow</a></div><div class="ttdef"><b>Definition:</b> axWindow.h:14</div></div>
+<div class="ttc" id="classaxWindow_html"><div class="ttname"><a href="classaxWindow.html">axWindow</a></div><div class="ttdef"><b>Definition:</b> axWindow.h:15</div></div>
 <div class="ttc" id="classaxApp_html"><div class="ttname"><a href="classaxApp.html">axApp</a></div><div class="ttdef"><b>Definition:</b> axApp.h:11</div></div>
 <div class="ttc" id="axC_09_09_8h_html"><div class="ttname"><a href="axC_09_09_8h.html">axC++.h</a></div></div>
 <div class="ttc" id="classaxTemplate2DPoint_html"><div class="ttname"><a href="classaxTemplate2DPoint.html">axTemplate2DPoint&lt; axInt &gt;</a></div></div>
 </div><!-- fragment --></div><!-- contents -->
 <!-- start footer part -->
 <hr class="footer"/><address class="footer"><small>
-Generated on Mon Jul 7 2014 13:07:37 by &#160;<a href="http://www.doxygen.org/index.html">
+Generated on Tue Jul 29 2014 19:56:05 by &#160;<a href="http://www.doxygen.org/index.html">
 <img class="footer" src="doxygen.png" alt="doxygen"/>
 </a> 1.8.6
 </small></address>
