--- a/include/docs/html/axManager_8h_source.html
+++ b/include/docs/html/axManager_8h_source.html
@@ -56,47 +56,48 @@
 <div class="line"><a name="l00036"></a><span class="lineno">   36</span>&#160;</div>
 <div class="line"><a name="l00037"></a><span class="lineno">   37</span>&#160;    <span class="comment">// Mouse events.</span></div>
 <div class="line"><a name="l00038"></a><span class="lineno">   38</span>&#160;    <span class="keywordtype">void</span> OnMouseMotion(<span class="keyword">const</span> <a class="code" href="classaxTemplate2DPoint.html">axPoint</a>&amp; pos);</div>
-<div class="line"><a name="l00039"></a><span class="lineno">   39</span>&#160;    <span class="keywordtype">void</span> OnMouseLeftDown(<span class="keyword">const</span> <a class="code" href="classaxTemplate2DPoint.html">axPoint</a>&amp; pos);</div>
-<div class="line"><a name="l00040"></a><span class="lineno">   40</span>&#160;    <span class="keywordtype">void</span> OnMouseLeftUp(<span class="keyword">const</span> <a class="code" href="classaxTemplate2DPoint.html">axPoint</a>&amp; pos);</div>
-<div class="line"><a name="l00041"></a><span class="lineno">   41</span>&#160;    <span class="keywordtype">void</span> OnMouseRightDown();</div>
-<div class="line"><a name="l00042"></a><span class="lineno">   42</span>&#160;    <span class="keywordtype">void</span> OnMouseRightUp();</div>
-<div class="line"><a name="l00043"></a><span class="lineno">   43</span>&#160;    <span class="keywordtype">void</span> GrabMouse(<a class="code" href="classaxWindow.html">axWindow</a>* win);</div>
-<div class="line"><a name="l00044"></a><span class="lineno">   44</span>&#160;    <span class="keywordtype">void</span> UnGrabMouse();</div>
-<div class="line"><a name="l00045"></a><span class="lineno">   45</span>&#160;</div>
-<div class="line"><a name="l00046"></a><span class="lineno">   46</span>&#160;    <span class="comment">// Keyboard events.</span></div>
-<div class="line"><a name="l00047"></a><span class="lineno">   47</span>&#160;    <span class="comment">// void OnCtrl();</span></div>
-<div class="line"><a name="l00048"></a><span class="lineno">   48</span>&#160;    <span class="comment">// void OnAlt();</span></div>
-<div class="line"><a name="l00049"></a><span class="lineno">   49</span>&#160;    <span class="comment">// void OnShift();</span></div>
-<div class="line"><a name="l00050"></a><span class="lineno">   50</span>&#160;    <span class="comment">// void OnKeyDown();</span></div>
-<div class="line"><a name="l00051"></a><span class="lineno">   51</span>&#160;    <span class="comment">// void OnKeyUp();</span></div>
-<div class="line"><a name="l00052"></a><span class="lineno">   52</span>&#160;</div>
-<div class="line"><a name="l00053"></a><span class="lineno">   53</span>&#160;    <span class="comment">// bool IsCtrlDown();</span></div>
-<div class="line"><a name="l00054"></a><span class="lineno">   54</span>&#160;    <span class="comment">// bool IsAltDown();</span></div>
-<div class="line"><a name="l00055"></a><span class="lineno">   55</span>&#160;    <span class="comment">// bool IsShiftDown();</span></div>
-<div class="line"><a name="l00056"></a><span class="lineno">   56</span>&#160;</div>
+<div class="line"><a name="l00039"></a><span class="lineno">   39</span>&#160;    <span class="comment">// void OnMouseLeftDragging(const axPoint&amp; pos);</span></div>
+<div class="line"><a name="l00040"></a><span class="lineno">   40</span>&#160;    <span class="keywordtype">void</span> OnMouseLeftDown(<span class="keyword">const</span> <a class="code" href="classaxTemplate2DPoint.html">axPoint</a>&amp; pos);</div>
+<div class="line"><a name="l00041"></a><span class="lineno">   41</span>&#160;    <span class="keywordtype">void</span> OnMouseLeftUp(<span class="keyword">const</span> <a class="code" href="classaxTemplate2DPoint.html">axPoint</a>&amp; pos);</div>
+<div class="line"><a name="l00042"></a><span class="lineno">   42</span>&#160;    <span class="keywordtype">void</span> OnMouseRightDown();</div>
+<div class="line"><a name="l00043"></a><span class="lineno">   43</span>&#160;    <span class="keywordtype">void</span> OnMouseRightUp();</div>
+<div class="line"><a name="l00044"></a><span class="lineno">   44</span>&#160;    <span class="keywordtype">void</span> GrabMouse(<a class="code" href="classaxWindow.html">axWindow</a>* win);</div>
+<div class="line"><a name="l00045"></a><span class="lineno">   45</span>&#160;    <span class="keywordtype">void</span> UnGrabMouse();</div>
+<div class="line"><a name="l00046"></a><span class="lineno">   46</span>&#160;</div>
+<div class="line"><a name="l00047"></a><span class="lineno">   47</span>&#160;    <span class="comment">// Keyboard events.</span></div>
+<div class="line"><a name="l00048"></a><span class="lineno">   48</span>&#160;    <span class="comment">// void OnCtrl();</span></div>
+<div class="line"><a name="l00049"></a><span class="lineno">   49</span>&#160;    <span class="comment">// void OnAlt();</span></div>
+<div class="line"><a name="l00050"></a><span class="lineno">   50</span>&#160;    <span class="comment">// void OnShift();</span></div>
+<div class="line"><a name="l00051"></a><span class="lineno">   51</span>&#160;    <span class="comment">// void OnKeyDown();</span></div>
+<div class="line"><a name="l00052"></a><span class="lineno">   52</span>&#160;    <span class="comment">// void OnKeyUp();</span></div>
+<div class="line"><a name="l00053"></a><span class="lineno">   53</span>&#160;</div>
+<div class="line"><a name="l00054"></a><span class="lineno">   54</span>&#160;    <span class="comment">// bool IsCtrlDown();</span></div>
+<div class="line"><a name="l00055"></a><span class="lineno">   55</span>&#160;    <span class="comment">// bool IsAltDown();</span></div>
+<div class="line"><a name="l00056"></a><span class="lineno">   56</span>&#160;    <span class="comment">// bool IsShiftDown();</span></div>
 <div class="line"><a name="l00057"></a><span class="lineno">   57</span>&#160;</div>
-<div class="line"><a name="l00058"></a><span class="lineno">   58</span>&#160;<span class="keyword">private</span>:</div>
-<div class="line"><a name="l00059"></a><span class="lineno">   59</span>&#160;    axWindowMap _windows; <span class="comment">// Map for drawing windows.</span></div>
-<div class="line"><a name="l00060"></a><span class="lineno">   60</span>&#160;    <a class="code" href="classaxWindowTree.html">axWindowTree</a> _windowTree;</div>
-<div class="line"><a name="l00061"></a><span class="lineno">   61</span>&#160;</div>
-<div class="line"><a name="l00062"></a><span class="lineno">   62</span>&#160;    <span class="comment">// Mouse.</span></div>
-<div class="line"><a name="l00063"></a><span class="lineno">   63</span>&#160;    <a class="code" href="classaxWindow.html">axWindow</a>* _mouseCaptureWindow;</div>
-<div class="line"><a name="l00064"></a><span class="lineno">   64</span>&#160;    <a class="code" href="classaxWindow.html">axWindow</a>* _pastWindow;</div>
-<div class="line"><a name="l00065"></a><span class="lineno">   65</span>&#160;    <a class="code" href="classaxWindow.html">axWindow</a>* _currentWindow;</div>
-<div class="line"><a name="l00066"></a><span class="lineno">   66</span>&#160;    <a class="code" href="classaxTemplate2DPoint.html">axPoint</a> _mousePosition;</div>
-<div class="line"><a name="l00067"></a><span class="lineno">   67</span>&#160;};</div>
-<div class="line"><a name="l00068"></a><span class="lineno">   68</span>&#160;</div>
-<div class="line"><a name="l00069"></a><span class="lineno">   69</span>&#160;<span class="preprocessor">#endif //__AX_MANAGER__</span></div>
-<div class="line"><a name="l00070"></a><span class="lineno">   70</span>&#160;<span class="preprocessor"></span></div>
+<div class="line"><a name="l00058"></a><span class="lineno">   58</span>&#160;</div>
+<div class="line"><a name="l00059"></a><span class="lineno">   59</span>&#160;<span class="keyword">private</span>:</div>
+<div class="line"><a name="l00060"></a><span class="lineno">   60</span>&#160;    axWindowMap _windows; <span class="comment">// Map for drawing windows.</span></div>
+<div class="line"><a name="l00061"></a><span class="lineno">   61</span>&#160;    <a class="code" href="classaxWindowTree.html">axWindowTree</a> _windowTree;</div>
+<div class="line"><a name="l00062"></a><span class="lineno">   62</span>&#160;</div>
+<div class="line"><a name="l00063"></a><span class="lineno">   63</span>&#160;    <span class="comment">// Mouse.</span></div>
+<div class="line"><a name="l00064"></a><span class="lineno">   64</span>&#160;    <a class="code" href="classaxWindow.html">axWindow</a>* _mouseCaptureWindow;</div>
+<div class="line"><a name="l00065"></a><span class="lineno">   65</span>&#160;    <a class="code" href="classaxWindow.html">axWindow</a>* _pastWindow;</div>
+<div class="line"><a name="l00066"></a><span class="lineno">   66</span>&#160;    <a class="code" href="classaxWindow.html">axWindow</a>* _currentWindow;</div>
+<div class="line"><a name="l00067"></a><span class="lineno">   67</span>&#160;    <a class="code" href="classaxTemplate2DPoint.html">axPoint</a> _mousePosition;</div>
+<div class="line"><a name="l00068"></a><span class="lineno">   68</span>&#160;};</div>
+<div class="line"><a name="l00069"></a><span class="lineno">   69</span>&#160;</div>
+<div class="line"><a name="l00070"></a><span class="lineno">   70</span>&#160;<span class="preprocessor">#endif //__AX_MANAGER__</span></div>
+<div class="line"><a name="l00071"></a><span class="lineno">   71</span>&#160;<span class="preprocessor"></span></div>
 <div class="ttc" id="classaxManager_html"><div class="ttname"><a href="classaxManager.html">axManager</a></div><div class="ttdef"><b>Definition:</b> axManager.h:18</div></div>
-<div class="ttc" id="classaxWindow_html"><div class="ttname"><a href="classaxWindow.html">axWindow</a></div><div class="ttdef"><b>Definition:</b> axWindow.h:14</div></div>
+<div class="ttc" id="classaxWindow_html"><div class="ttname"><a href="classaxWindow.html">axWindow</a></div><div class="ttdef"><b>Definition:</b> axWindow.h:15</div></div>
 <div class="ttc" id="axC_09_09_8h_html"><div class="ttname"><a href="axC_09_09_8h.html">axC++.h</a></div></div>
 <div class="ttc" id="classaxWindowTree_html"><div class="ttname"><a href="classaxWindowTree.html">axWindowTree</a></div><div class="ttdef"><b>Definition:</b> axWindowTree.h:43</div></div>
 <div class="ttc" id="classaxTemplate2DPoint_html"><div class="ttname"><a href="classaxTemplate2DPoint.html">axTemplate2DPoint&lt; axInt &gt;</a></div></div>
 </div><!-- fragment --></div><!-- contents -->
 <!-- start footer part -->
 <hr class="footer"/><address class="footer"><small>
-Generated on Mon Jul 7 2014 13:07:37 by &#160;<a href="http://www.doxygen.org/index.html">
+Generated on Tue Jul 29 2014 19:56:05 by &#160;<a href="http://www.doxygen.org/index.html">
 <img class="footer" src="doxygen.png" alt="doxygen"/>
 </a> 1.8.6
 </small></address>
