--- a/include/docs/html/axPanel_8h_source.html
+++ b/include/docs/html/axPanel_8h_source.html
@@ -42,19 +42,24 @@
 <div class="line"><a name="l00020"></a><span class="lineno">   20</span>&#160;</div>
 <div class="line"><a name="l00021"></a><span class="lineno">   21</span>&#160;    <a class="code" href="classaxApp.html">axApp</a>* GetApp();</div>
 <div class="line"><a name="l00022"></a><span class="lineno">   22</span>&#160;</div>
-<div class="line"><a name="l00023"></a><span class="lineno">   23</span>&#160;<span class="keyword">private</span>:</div>
-<div class="line"><a name="l00024"></a><span class="lineno">   24</span>&#160;    <a class="code" href="classaxApp.html">axApp</a>* _app;</div>
-<div class="line"><a name="l00025"></a><span class="lineno">   25</span>&#160;};</div>
-<div class="line"><a name="l00026"></a><span class="lineno">   26</span>&#160;</div>
-<div class="line"><a name="l00027"></a><span class="lineno">   27</span>&#160;<span class="preprocessor">#endif //__AX_PANEL__</span></div>
-<div class="ttc" id="classaxWindow_html"><div class="ttname"><a href="classaxWindow.html">axWindow</a></div><div class="ttdef"><b>Definition:</b> axWindow.h:14</div></div>
+<div class="line"><a name="l00023"></a><span class="lineno">   23</span>&#160;    <span class="keywordtype">void</span> BlockDrawing();</div>
+<div class="line"><a name="l00024"></a><span class="lineno">   24</span>&#160;    <span class="keywordtype">void</span> BlockDrawing(<span class="keyword">const</span> <a class="code" href="classaxTemplateRect.html">axRect</a>&amp; rect);</div>
+<div class="line"><a name="l00025"></a><span class="lineno">   25</span>&#160;</div>
+<div class="line"><a name="l00026"></a><span class="lineno">   26</span>&#160;    <span class="keywordtype">void</span> UnBlockDrawing();</div>
+<div class="line"><a name="l00027"></a><span class="lineno">   27</span>&#160;</div>
+<div class="line"><a name="l00028"></a><span class="lineno">   28</span>&#160;<span class="keyword">private</span>:</div>
+<div class="line"><a name="l00029"></a><span class="lineno">   29</span>&#160;    <a class="code" href="classaxApp.html">axApp</a>* _app;</div>
+<div class="line"><a name="l00030"></a><span class="lineno">   30</span>&#160;};</div>
+<div class="line"><a name="l00031"></a><span class="lineno">   31</span>&#160;</div>
+<div class="line"><a name="l00032"></a><span class="lineno">   32</span>&#160;<span class="preprocessor">#endif //__AX_PANEL__</span></div>
+<div class="ttc" id="classaxWindow_html"><div class="ttname"><a href="classaxWindow.html">axWindow</a></div><div class="ttdef"><b>Definition:</b> axWindow.h:15</div></div>
 <div class="ttc" id="classaxApp_html"><div class="ttname"><a href="classaxApp.html">axApp</a></div><div class="ttdef"><b>Definition:</b> axApp.h:11</div></div>
 <div class="ttc" id="classaxTemplateRect_html"><div class="ttname"><a href="classaxTemplateRect.html">axTemplateRect&lt; axPoint, axSize, axInt &gt;</a></div></div>
 <div class="ttc" id="classaxPanel_html"><div class="ttname"><a href="classaxPanel.html">axPanel</a></div><div class="ttdef"><b>Definition:</b> axPanel.h:7</div></div>
 </div><!-- fragment --></div><!-- contents -->
 <!-- start footer part -->
 <hr class="footer"/><address class="footer"><small>
-Generated on Mon Jul 7 2014 13:07:37 by &#160;<a href="http://www.doxygen.org/index.html">
+Generated on Tue Jul 29 2014 19:56:05 by &#160;<a href="http://www.doxygen.org/index.html">
 <img class="footer" src="doxygen.png" alt="doxygen"/>
 </a> 1.8.6
 </small></address>
