--- a/include/docs/html/classaxApp-members.html
+++ b/include/docs/html/classaxApp-members.html
@@ -26,14 +26,16 @@
   <tr bgcolor="#f0f0f0" class="even"><td class="entry"><b>AddWindow</b>(axWindow *win) (defined in <a class="el" href="classaxApp.html">axApp</a>)</td><td class="entry"><a class="el" href="classaxApp.html">axApp</a></td><td class="entry"></td></tr>
   <tr bgcolor="#f0f0f0"><td class="entry"><b>axApp</b>() (defined in <a class="el" href="classaxApp.html">axApp</a>)</td><td class="entry"><a class="el" href="classaxApp.html">axApp</a></td><td class="entry"></td></tr>
   <tr bgcolor="#f0f0f0" class="even"><td class="entry"><b>axApp</b>(const axSize &amp;frame_size) (defined in <a class="el" href="classaxApp.html">axApp</a>)</td><td class="entry"><a class="el" href="classaxApp.html">axApp</a></td><td class="entry"></td></tr>
-  <tr bgcolor="#f0f0f0"><td class="entry"><b>GetCore</b>() (defined in <a class="el" href="classaxApp.html">axApp</a>)</td><td class="entry"><a class="el" href="classaxApp.html">axApp</a></td><td class="entry"></td></tr>
+  <tr bgcolor="#f0f0f0"><td class="entry"><b>CreatePopupWindow</b>(const axSize &amp;size) (defined in <a class="el" href="classaxApp.html">axApp</a>)</td><td class="entry"><a class="el" href="classaxApp.html">axApp</a></td><td class="entry"></td></tr>
+  <tr bgcolor="#f0f0f0" class="even"><td class="entry"><b>GetCore</b>() (defined in <a class="el" href="classaxApp.html">axApp</a>)</td><td class="entry"><a class="el" href="classaxApp.html">axApp</a></td><td class="entry"></td></tr>
+  <tr bgcolor="#f0f0f0"><td class="entry"><b>GetCurrentAppDirectory</b>() (defined in <a class="el" href="classaxApp.html">axApp</a>)</td><td class="entry"><a class="el" href="classaxApp.html">axApp</a></td><td class="entry"></td></tr>
   <tr bgcolor="#f0f0f0" class="even"><td class="entry"><b>GetWindowManager</b>() (defined in <a class="el" href="classaxApp.html">axApp</a>)</td><td class="entry"><a class="el" href="classaxApp.html">axApp</a></td><td class="entry"></td></tr>
   <tr bgcolor="#f0f0f0"><td class="entry"><b>MainLoop</b>() (defined in <a class="el" href="classaxApp.html">axApp</a>)</td><td class="entry"><a class="el" href="classaxApp.html">axApp</a></td><td class="entry"></td></tr>
   <tr bgcolor="#f0f0f0" class="even"><td class="entry"><b>UpdateAll</b>() (defined in <a class="el" href="classaxApp.html">axApp</a>)</td><td class="entry"><a class="el" href="classaxApp.html">axApp</a></td><td class="entry"></td></tr>
 </table></div><!-- contents -->
 <!-- start footer part -->
 <hr class="footer"/><address class="footer"><small>
-Generated on Mon Jul 7 2014 13:07:37 by &#160;<a href="http://www.doxygen.org/index.html">
+Generated on Tue Jul 29 2014 19:56:05 by &#160;<a href="http://www.doxygen.org/index.html">
 <img class="footer" src="doxygen.png" alt="doxygen"/>
 </a> 1.8.6
 </small></address>
