--- a/include/docs/html/classaxApp.html
+++ b/include/docs/html/classaxApp.html
@@ -32,6 +32,9 @@ Public Member Functions</h2></td></tr>
 <tr class="memitem:a74ace6a9d673778aee1edd2dc81539f6"><td class="memItemLeft" align="right" valign="top"><a class="anchor" id="a74ace6a9d673778aee1edd2dc81539f6"></a>
 void&#160;</td><td class="memItemRight" valign="bottom"><b>MainLoop</b> ()</td></tr>
 <tr class="separator:a74ace6a9d673778aee1edd2dc81539f6"><td class="memSeparator" colspan="2">&#160;</td></tr>
+<tr class="memitem:a23b0f90210a02dc29d70566dbfc0ba86"><td class="memItemLeft" align="right" valign="top"><a class="anchor" id="a23b0f90210a02dc29d70566dbfc0ba86"></a>
+void&#160;</td><td class="memItemRight" valign="bottom"><b>CreatePopupWindow</b> (const <a class="el" href="classaxTemplate2DPoint.html">axSize</a> &amp;size)</td></tr>
+<tr class="separator:a23b0f90210a02dc29d70566dbfc0ba86"><td class="memSeparator" colspan="2">&#160;</td></tr>
 <tr class="memitem:a235043ed469926aaacc8d14df2b6bcf7"><td class="memItemLeft" align="right" valign="top"><a class="anchor" id="a235043ed469926aaacc8d14df2b6bcf7"></a>
 <a class="el" href="classaxManager.html">axManager</a> *&#160;</td><td class="memItemRight" valign="bottom"><b>GetWindowManager</b> ()</td></tr>
 <tr class="separator:a235043ed469926aaacc8d14df2b6bcf7"><td class="memSeparator" colspan="2">&#160;</td></tr>
@@ -44,6 +47,9 @@ void&#160;</td><td class="memItemRight" valign="bottom"><b>UpdateAll</b> ()</td>
 <tr class="memitem:abd5d32dc293b4417be244a757a2bfdb6"><td class="memItemLeft" align="right" valign="top"><a class="anchor" id="abd5d32dc293b4417be244a757a2bfdb6"></a>
 <a class="el" href="classaxCore.html">axCore</a> *&#160;</td><td class="memItemRight" valign="bottom"><b>GetCore</b> ()</td></tr>
 <tr class="separator:abd5d32dc293b4417be244a757a2bfdb6"><td class="memSeparator" colspan="2">&#160;</td></tr>
+<tr class="memitem:ac6356437bf9927d78c07fa14e69a697d"><td class="memItemLeft" align="right" valign="top"><a class="anchor" id="ac6356437bf9927d78c07fa14e69a697d"></a>
+string&#160;</td><td class="memItemRight" valign="bottom"><b>GetCurrentAppDirectory</b> ()</td></tr>
+<tr class="separator:ac6356437bf9927d78c07fa14e69a697d"><td class="memSeparator" colspan="2">&#160;</td></tr>
 </table>
 <hr/>The documentation for this class was generated from the following file:<ul>
 <li><a class="el" href="axApp_8h_source.html">axApp.h</a></li>
@@ -51,7 +57,7 @@ void&#160;</td><td class="memItemRight" valign="bottom"><b>UpdateAll</b> ()</td>
 </div><!-- contents -->
 <!-- start footer part -->
 <hr class="footer"/><address class="footer"><small>
-Generated on Mon Jul 7 2014 13:07:37 by &#160;<a href="http://www.doxygen.org/index.html">
+Generated on Tue Jul 29 2014 19:56:05 by &#160;<a href="http://www.doxygen.org/index.html">
 <img class="footer" src="doxygen.png" alt="doxygen"/>
 </a> 1.8.6
 </small></address>
