--- a/include/docs/html/group__Utils.html
+++ b/include/docs/html/group__Utils.html
@@ -178,6 +178,12 @@ string&#160;</td><td class="memItemRight" valign="bottom"><b>axFloatToString</b>
 <tr class="memitem:gacd86b5a85ebf71bfbaf49b3855d700c8"><td class="memItemLeft" align="right" valign="top"><a class="anchor" id="gacd86b5a85ebf71bfbaf49b3855d700c8"></a>
 string&#160;</td><td class="memItemRight" valign="bottom"><b>axIntToString</b> (const int &amp;value)</td></tr>
 <tr class="separator:gacd86b5a85ebf71bfbaf49b3855d700c8"><td class="memSeparator" colspan="2">&#160;</td></tr>
+<tr class="memitem:ga23c1907eb8923c1a10f35f5103b9cc1a"><td class="memItemLeft" align="right" valign="top"><a class="anchor" id="ga23c1907eb8923c1a10f35f5103b9cc1a"></a>
+string&#160;</td><td class="memItemRight" valign="bottom"><b>OpenFileDialog</b> (const string &amp;app_name, string folder_path=&quot;&quot;)</td></tr>
+<tr class="separator:ga23c1907eb8923c1a10f35f5103b9cc1a"><td class="memSeparator" colspan="2">&#160;</td></tr>
+<tr class="memitem:gaec32338834073afde2a17ec3560349dc"><td class="memItemLeft" align="right" valign="top"><a class="anchor" id="gaec32338834073afde2a17ec3560349dc"></a>
+string&#160;</td><td class="memItemRight" valign="bottom"><b>axGetExtension</b> (const string &amp;path)</td></tr>
+<tr class="separator:gaec32338834073afde2a17ec3560349dc"><td class="memSeparator" colspan="2">&#160;</td></tr>
 </table>
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
 <h2 class="groupheader">Macro Definition Documentation</h2>
@@ -232,7 +238,7 @@ string&#160;</td><td class="memItemRight" valign="bottom"><b>axIntToString</b> (
 </div><!-- contents -->
 <!-- start footer part -->
 <hr class="footer"/><address class="footer"><small>
-Generated on Mon Jul 7 2014 13:07:37 by &#160;<a href="http://www.doxygen.org/index.html">
+Generated on Tue Jul 29 2014 19:56:05 by &#160;<a href="http://www.doxygen.org/index.html">
 <img class="footer" src="doxygen.png" alt="doxygen"/>
 </a> 1.8.6
 </small></address>
