--- a/include/docs/html/structaxRange-members.html
+++ b/include/docs/html/structaxRange-members.html
@@ -23,14 +23,14 @@
 
 <p>This is the complete list of members for <a class="el" href="structaxRange.html">axRange&lt; T &gt;</a>, including all inherited members.</p>
 <table class="directory">
-  <tr bgcolor="#f0f0f0" class="even"><td class="entry"><b>_max</b> (defined in <a class="el" href="structaxRange.html">axRange&lt; T &gt;</a>)</td><td class="entry"><a class="el" href="structaxRange.html">axRange&lt; T &gt;</a></td><td class="entry"></td></tr>
-  <tr bgcolor="#f0f0f0"><td class="entry"><b>_min</b> (defined in <a class="el" href="structaxRange.html">axRange&lt; T &gt;</a>)</td><td class="entry"><a class="el" href="structaxRange.html">axRange&lt; T &gt;</a></td><td class="entry"></td></tr>
   <tr bgcolor="#f0f0f0" class="even"><td class="entry"><b>axRange</b>() (defined in <a class="el" href="structaxRange.html">axRange&lt; T &gt;</a>)</td><td class="entry"><a class="el" href="structaxRange.html">axRange&lt; T &gt;</a></td><td class="entry"><span class="mlabel">inline</span></td></tr>
   <tr bgcolor="#f0f0f0"><td class="entry"><b>axRange</b>(const T &amp;minimum, const T &amp;maximum) (defined in <a class="el" href="structaxRange.html">axRange&lt; T &gt;</a>)</td><td class="entry"><a class="el" href="structaxRange.html">axRange&lt; T &gt;</a></td><td class="entry"><span class="mlabel">inline</span></td></tr>
+  <tr bgcolor="#f0f0f0" class="even"><td class="entry"><b>max</b> (defined in <a class="el" href="structaxRange.html">axRange&lt; T &gt;</a>)</td><td class="entry"><a class="el" href="structaxRange.html">axRange&lt; T &gt;</a></td><td class="entry"></td></tr>
+  <tr bgcolor="#f0f0f0"><td class="entry"><b>min</b> (defined in <a class="el" href="structaxRange.html">axRange&lt; T &gt;</a>)</td><td class="entry"><a class="el" href="structaxRange.html">axRange&lt; T &gt;</a></td><td class="entry"></td></tr>
 </table></div><!-- contents -->
 <!-- start footer part -->
 <hr class="footer"/><address class="footer"><small>
-Generated on Mon Jul 7 2014 13:07:37 by &#160;<a href="http://www.doxygen.org/index.html">
+Generated on Tue Jul 29 2014 19:56:05 by &#160;<a href="http://www.doxygen.org/index.html">
 <img class="footer" src="doxygen.png" alt="doxygen"/>
 </a> 1.8.6
 </small></address>
