--- a/include/docs/html/structaxRange.html
+++ b/include/docs/html/structaxRange.html
@@ -33,12 +33,12 @@ Public Member Functions</h2></td></tr>
 </table><table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a name="pub-attribs"></a>
 Public Attributes</h2></td></tr>
-<tr class="memitem:a99653322f3535c8e4696075eaacd37e0"><td class="memItemLeft" align="right" valign="top"><a class="anchor" id="a99653322f3535c8e4696075eaacd37e0"></a>
-T&#160;</td><td class="memItemRight" valign="bottom"><b>_min</b></td></tr>
-<tr class="separator:a99653322f3535c8e4696075eaacd37e0"><td class="memSeparator" colspan="2">&#160;</td></tr>
-<tr class="memitem:a2c1c3f13b7fc6c69ceba071e0599ed0b"><td class="memItemLeft" align="right" valign="top"><a class="anchor" id="a2c1c3f13b7fc6c69ceba071e0599ed0b"></a>
-T&#160;</td><td class="memItemRight" valign="bottom"><b>_max</b></td></tr>
-<tr class="separator:a2c1c3f13b7fc6c69ceba071e0599ed0b"><td class="memSeparator" colspan="2">&#160;</td></tr>
+<tr class="memitem:a08dde9440233d28773c2fb3add010f15"><td class="memItemLeft" align="right" valign="top"><a class="anchor" id="a08dde9440233d28773c2fb3add010f15"></a>
+T&#160;</td><td class="memItemRight" valign="bottom"><b>min</b></td></tr>
+<tr class="separator:a08dde9440233d28773c2fb3add010f15"><td class="memSeparator" colspan="2">&#160;</td></tr>
+<tr class="memitem:a85725eb4149d6a16003e46bee1a2a6c1"><td class="memItemLeft" align="right" valign="top"><a class="anchor" id="a85725eb4149d6a16003e46bee1a2a6c1"></a>
+T&#160;</td><td class="memItemRight" valign="bottom"><b>max</b></td></tr>
+<tr class="separator:a85725eb4149d6a16003e46bee1a2a6c1"><td class="memSeparator" colspan="2">&#160;</td></tr>
 </table>
 <hr/>The documentation for this struct was generated from the following file:<ul>
 <li><a class="el" href="axUtils_8h_source.html">axUtils.h</a></li>
@@ -46,7 +46,7 @@ T&#160;</td><td class="memItemRight" valign="bottom"><b>_max</b></td></tr>
 </div><!-- contents -->
 <!-- start footer part -->
 <hr class="footer"/><address class="footer"><small>
-Generated on Mon Jul 7 2014 13:07:37 by &#160;<a href="http://www.doxygen.org/index.html">
+Generated on Tue Jul 29 2014 19:56:05 by &#160;<a href="http://www.doxygen.org/index.html">
 <img class="footer" src="doxygen.png" alt="doxygen"/>
 </a> 1.8.6
 </small></address>
