--- a/axProjects/MidiSequencer/builds/XCode6/MidiSequencer/MidiSequencer/MainMenu.xib
+++ b/axProjects/MidiSequencer/builds/XCode6/MidiSequencer/MidiSequencer/MainMenu.xib
@@ -667,7 +667,7 @@
                 </menuItem>
             </items>
         </menu>
-        <window title="ax" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
+        <window title="ax" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" hidesOnDeactivate="YES" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="335" y="390" width="567" height="771"/>
